[package]
name = "moneta"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
scraper = "0.13"
comfy-table = "6.1"
[profile.release]

opt-level = 3   # Maximum optimization level
lto = "fat"     # Full link-time optimization (LTO)
codegen-units = 1 # Optimize as a single compilation unit
panic = "abort"  # Remove stack unwinding to reduce binary size
strip = true     # Strip debugging symbols

